# ConsulLinuxMonitor

./: .gitignore  CMakeLists.txt  README.md  client.json  server.json
consul/: checkpoint-signature  node-id
consul/raft/: raft.db
consul/serf/: local.snapshot  remote.snapshot
docker/scripts/: monitor_docker_into.sh  monitor_docker_run.sh
logs/:  .WARNING   .u-virtual-machine.u.log.WARNING.20240822-195710.69119   .u-virtual-machine.u.log.WARNING.20240822-195830.69401   .u-virtual-machine.u.log.WARNING.20240823-172037.46142   .u-virtual-machine.u.log.WARNING.20240823-182228.47364   .u-virtual-machine.u.log.WARNING.20240824-144803.70214   .u-virtual-machine.u.log.WARNING.20240824-145410.71128   .u-virtual-machine.u.log.WARNING.20240824-150557.73328   .u-virtual-machine.u.log.WARNING.20240824-151306.74267   .u-virtual-machine.u.log.WARNING.20240824-152623.75567   .u-virtual-machine.u.log.WARNING.20240824-153528.76156   .u-virtual-machine.u.log.WARNING.20240824-155312.78576   .u-virtual-machine.u.log.WARNING.20240824-155455.79100   .u-virtual-machine.u.log.WARNING.20240824-155916.79884   .u-virtual-machine.u.log.WARNING.20240824-160204.80893   .u-virtual-machine.u.log.WARNING.20240824-161438.82050   .u-virtual-machine.u.log.WARNING.20240824-161852.83536   .u-virtual-machine.u.log.WARNING.20240824-162123.84254   .u-virtual-machine.u.log.WARNING.20240824-162825.85110   .u-virtual-machine.u.log.WARNING.20240824-164310.86354   .u-virtual-machine.u.log.WARNING.20240824-164504.86735   .u-virtual-machine.u.log.WARNING.20240824-170350.87720   .u-virtual-machine.u.log.WARNING.20240824-171441.88874   .u-virtual-machine.u.log.WARNING.20240824-211215.9988   .u-virtual-machine.u.log.WARNING.20240824-211634.10231   .u-virtual-machine.u.log.WARNING.20240824-211803.10664   .u-virtual-machine.u.log.WARNING.20240824-211908.11092   .u-virtual-machine.u.log.WARNING.20240824-215347.15403   .u-virtual-machine.u.log.WARNING.20240824-224035.2905   .u-virtual-machine.u.log.WARNING.20240825-123427.8992   .u-virtual-machine.u.log.WARNING.20240825-144503.25084   .u-virtual-machine.u.log.WARNING.20240825-154024.82   .u-virtual-machine.u.log.WARNING.20240826-161335.10052  UNKNOWN.INFO  common20240822-195710.69119  common20240822-195830.69401  common20240823-171605.44687  common20240823-171723.44923  common20240823-171818.45482  common20240823-172037.46142  (+41 more)
src/: CMakeLists.txt
src/linux_Monitor/: CMakeLists.txt
src/linux_Monitor/Linux_Monitor/: CMakeLists.txt
src/linux_Monitor/Linux_Monitor/include/monitor/: cpu_load_monitor.h  cpu_softirq_monitor.h  cpu_stat_monitor.h  mem_monitor.h  monitor_inter.h  net_monitor.h
src/linux_Monitor/Linux_Monitor/include/utils/: monitorFactory.h  read_file.h  utils.h
src/linux_Monitor/Linux_Monitor/src/: CMakeLists.txt  main_test.cpp
src/linux_Monitor/Linux_Monitor/src/monitor/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  mem_monitor.cpp  net_monitor.cpp
src/linux_Monitor/Linux_Monitor/src/utils/: read_file.cpp
src/linux_Monitor/common/: CMakeLists.txt  common.cpp  common.h  main_common_test.cpp  myLog.cpp  myLog.h
src/linux_Monitor/display_monitor/: CMakeLists.txt  cpu_load_model.cpp  cpu_load_model.h  cpu_softirq_model.cpp  cpu_softirq_model.h  cpu_stat_model.cpp  cpu_stat_model.h  main_test.cpp  mem_model.cpp  mem_model.h  monitor_inter.cpp  monitor_inter.h  monitor_widget.cpp  monitor_widget.h  net_model.cpp  net_model.h
src/linux_Monitor/proto/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  health.proto  mem_info.proto  monitor_info.proto  net_info.proto
src/linux_Monitor/rpc_manager/: CMakeLists.txt
src/linux_Monitor/rpc_manager/client/: CMakeLists.txt  main_test.cpp  rpc_client.cpp  rpc_client.h
src/linux_Monitor/rpc_manager/server/: CMakeLists.txt  main_test.cpp  rpc_manager.cpp  rpc_manager.h
